# todo-rust-backend

./: .env  .env.example  Cargo.toml  Dockerfile  README.md  build.sh  deploy.sh  docker-compose.yml  setup_db.sql
.cargo/: config.toml
migrations/: 20240601000001_create_users_table.sql  20240601000002_create_todos_table.sql  add_2fa_to_users.sql  add_backup_codes_to_users.sql
src/: main.rs  swagger.rs
src/db/: database.rs  mod.rs  redis_client.rs
src/db/data_trait/: mod.rs  pizza_data_trait.rs  todo_data_trait.rs  user_data_trait.rs
src/error/: app_error.rs  mod.rs  pizza_error.rs  todo_error.rs  user_error.rs
src/middleware/: auth.rs  mod.rs
src/models/: app.rs  mod.rs  pizza.rs  todo.rs  user.rs
src/routers/: health.rs  mod.rs  pizza.rs  todo.rs  user.rs
src/services/: cache_service.rs  mod.rs  token_service.rs  two_factor_service.rs
