[package]
name = "rust_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
async-trait = "0.1.86"
derive_more = { version = "2.0.1", features = ["full"] }
env_logger = "0.11.6"
log = "0.4.25"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
futures = "0.3.29"
actix-service = "2.0.2"
bcrypt = "0.17.0"
jsonwebtoken = "9.1.0"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
actix-cors = "0.7.1"
actix-web-httpauth = "0.8.1"
# PostgreSQL dependencies
sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }
utoipa = { version = "5.3.1", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web"] }
futures-util = "0.3.29"
