[package]
name = "rust_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
async-trait = "0.1.86"
derive_more = { version = "2.0.1", features = ["full"] }
env_logger = "0.11.6"
log = "0.4.25"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
validator = { version = "0.20.0", features = ["derive"] }
futures = "0.3.29"
actix-service = "2.0.2"
bcrypt = "0.17.0"
jsonwebtoken = "9.1.0"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
actix-cors = "0.7.1"
actix-web-httpauth = "0.8.1"
# PostgreSQL dependencies
sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }
utoipa = { version = "5.3.1", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web"] }
futures-util = "0.3.29"
redis = { version = "0.29.1", features = ["tokio-comp", "connection-manager"] }
tokio = { version = "1.36.0", features = ["full", "sync"] }
# 2FA dependencies
totp-rs = "5.5.1"
data-encoding = "2.5.0"
qrcode = "0.13.0"
image = "0.24.8"
base64 = "0.21.7"
rand = "0.8.5"
urlencoding = "2.1.3"
sha2 = "0.10.8"
hex = "0.4.3"

# Specify the binary target
[[bin]]
name = "rust_backend"
path = "src/main.rs"
